[package]
name = "clap_mangen"
version = "0.2.31"
description = "A manpage generator for clap"
categories = ["command-line-interface"]
keywords = [
  "clap",
  "cli",
  "generate",
  "manpage",
]
repository.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
include.workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = ["--generate-link-to-definition"]

[package.metadata.release]
pre-release-replacements = [
  {file="CHANGELOG.md", search="Unreleased", replace="{{version}}", min=1},
  {file="CHANGELOG.md", search="\\.\\.\\.HEAD", replace="...{{tag_name}}", exactly=1},
  {file="CHANGELOG.md", search="ReleaseDate", replace="{{date}}", min=1},
  {file="CHANGELOG.md", search="<!-- next-header -->", replace="<!-- next-header -->\n## [Unreleased] - ReleaseDate\n", exactly=1},
  {file="CHANGELOG.md", search="<!-- next-url -->", replace="<!-- next-url -->\n[Unreleased]: https://github.com/clap-rs/clap/compare/{{tag_name}}...HEAD", exactly=1},
  {file="README.md", search="github.com/clap-rs/clap/blob/[^/]+/", replace="github.com/clap-rs/clap/blob/{{tag_name}}/", exactly=4, prerelease = true},
]

[lib]
bench = false

[dependencies]
roff = "0.2.1"
anstyle-roff = { version = "0.3.8", optional = true }
clap = { path = "../", version = "4.0.0", default-features = false, features = ["std", "env"] }

[dev-dependencies]
snapbox = { version = "0.6.0", features = ["diff"] }
clap = { path = "../", version = "4.0.0", default-features = false, features = ["std", "help", "string", "color"] }
automod = "1.0.14"
anstyle = "1.0.11"

[features]
default = []
ansi = ["dep:anstyle-roff", "clap/color"]
debug = ["clap/debug"]

[lints]
workspace = true
