[package]
name = "fuzz"
version = "0.0.0"
edition = "2021"
publish = false

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4.8"
fuzzed-data-provider-rs = "0.1.1"
clap = { path = "../", version = "4.5.20", features = ["derive"] }

# Prevent this from interfering with workspaces
[workspace]

[[bin]]
name = "parse_fuzzer"
path = "fuzz_targets/parse_fuzzer.rs"
test = false
doc = false

